--- a/assets/assets/minecraft/optifine/cit/army/Viviska.properties
+++ b/assets/assets/minecraft/optifine/cit/army/Viviska.properties
@@ -1,5 +1,5 @@
 type=item
-matchItems=carved_pumpkin
+matchItems=painting 9
 model=Viviska
 nbt.display.Name=ipattern:\u0421\u0445\u0435\u043C\u0430 \u0421\u043D\u0430\u0439\u043F\u0435\u0440\u0441\u043A\u043E\u0439 \u0412\u0438\u043D\u0442\u043E\u0432\u043A\u0438
 #Схема Снайперской Винтовки
