--- a/assets/assets/minecraft/optifine/cit/holliday_pack/elytra/christimal_elytra_icon.properties
+++ b/assets/assets/minecraft/optifine/cit/holliday_pack/elytra/christimal_elytra_icon.properties
@@ -2,4 +2,4 @@ type=item
 items=minecraft:elytra
 texture.elytra=christimal_elytra_icon
 texture.broken_elytra=broken_elytra_christimal
-nbt.display.Name=ipattern:Cyan Parrot Elytra
+nbt.display.Name=ipattern:\u041D\u043E\u0432\u043E\u0433\u043E\u0434\u043D\u0438\u0435 \u044D\u043B\u0438\u0442\u0440\u044B
