--- a/assets/assets/minecraft/optifine/cit/holliday_pack/decor/present.properties
+++ b/assets/assets/minecraft/optifine/cit/holliday_pack/decor/present.properties
@@ -1,4 +1,4 @@
 type=item
 matchItems=carved_pumpkin
 model=present.json
-nbt.display.Name=Presents
+nbt.display.Name=ipattern:\u041A\u0443\u0447\u0430 \u043F\u043E\u0434\u0430\u0440\u043A\u043E\u0432
