--- a/assets/assets/minecraft/optifine/cit/holliday_pack/decor/santa_hat.properties
+++ b/assets/assets/minecraft/optifine/cit/holliday_pack/decor/santa_hat.properties
@@ -1,4 +1,4 @@
 type=item
 matchItems=carved_pumpkin
 model=santa_hat.json
-nbt.display.Name=Santa hat
+nbt.display.Name=ipattern:\u0428\u0430\u043F\u043A\u0430 \u0441\u0430\u043D\u0442\u044B
