--- a/assets/assets/minecraft/optifine/cit/holliday_pack/decor/venok1.properties
+++ b/assets/assets/minecraft/optifine/cit/holliday_pack/decor/venok1.properties
@@ -1,4 +1,4 @@
 type=item
 matchItems=carved_pumpkin
 model=venok1.json
-nbt.display.Name=Venok
+nbt.display.Name=ipattern:\u041D\u043E\u0432\u043E\u0433\u043E\u0434\u043D\u0438\u0439 \u0432\u0435\u043D\u043E\u043A
