--- a/assets/assets/minecraft/optifine/cit/mage_set/icon/mage_dark_2_h_i.properties
+++ b/assets/assets/minecraft/optifine/cit/mage_set/icon/mage_dark_2_h_i.properties
@@ -1,4 +1,4 @@
 type=item
 matchItems=leather_helmet chainmail_helmet iron_helmet diamond_helmet golden_helmet netherite_helmet
-model=mage_i
+texture=chainmail_helmet
 nbt.display.Name=ipattern:\u0428\u043b\u0435\u043c \u043c\u0430\u0433\u0430
