--- a/assets/assets/minecraft/optifine/cit/holliday_pack/bow/bow.properties
+++ b/assets/assets/minecraft/optifine/cit/holliday_pack/bow/bow.properties
@@ -1,8 +1,8 @@
 type=item
 matchItems=bow
-texture.bow_standby=bow
-texture.bow_pulling_0=bow
-texture.bow_pulling_1=bow_1
-texture.bow_pulling_2=bow_1
+model.bow_standby=bow
+model.bow_pulling_0=bow
+model.bow_pulling_1=bow_1
+model.bow_pulling_2=bow_1
 nbt.display.Name=ipattern:\u041D\u043E\u0432\u043E\u0433\u043E\u0434\u043D\u0438\u0439 \u043B\u0443\u043A
 #Новогодний лук
