--- a/assets/assets/minecraft/optifine/cit/holliday_pack/shovel/shovel.properties
+++ b/assets/assets/minecraft/optifine/cit/holliday_pack/shovel/shovel.properties
@@ -1,4 +1,4 @@
 type=item
 matchItems=wooden_shovel stone_shovel iron_shovel diamond_shovel golden_shovel netherite_shovel
-texture=shovel
+model=shovel
 nbt.display.Name=ipattern:\u041D\u043E\u0432\u043E\u0433\u043E\u0434\u043D\u044F\u044F \u043B\u043E\u043F\u0430\u0442\u0430
