--- a/assets/assets/minecraft/optifine/cit/holliday_pack/decor/mine_elka.properties
+++ b/assets/assets/minecraft/optifine/cit/holliday_pack/decor/mine_elka.properties
@@ -1,4 +1,4 @@
 type=item
-matchItems=carved_pumpkin
+matchItems=carved_pumpkin stone_sword diamond_sword iron_sword golden_sword netherite_sword wooden_sword
 model=mine_elka
 nbt.display.Name=ipattern:\u041C\u0430\u043B\u0435\u043D\u044C\u043A\u0430\u044F \u0435\u043B\u043A\u0430
