--- a/assets/assets/minecraft/optifine/cit/sweets_bag/sweets_bag.properties
+++ b/assets/assets/minecraft/optifine/cit/sweets_bag/sweets_bag.properties
@@ -1,5 +1,5 @@
 type=item
-matchItems=pumpkin_pie cooked_beef rabbit_stew cake cooked_porkchop mushroom_stew beetroot_soup golden_carrot cooked_mutton cooked_chicken cooked_salmon suspicious_stew honey_bottle baked_potato cooked_rabbit cooked_fish bread golden_apple apple chorus_fruit rotten_flesh carrot beef rabbit porkchop sweet_berries melon_slice chicken cod cookie mutton salmon	beetroot potato tropical_fish dried_kelp
+matchItems=pumpkin_pie cooked_beef rabbit_stew cake cooked_porkchop mushroom_stew beetroot_soup golden_carrot cooked_mutton cooked_chicken cooked_salmon suspicious_stew honey_bottle baked_potato cooked_rabbit cooked_cod bread golden_apple apple chorus_fruit rotten_flesh carrot beef rabbit porkchop sweet_berries melon_slice chicken cod cookie mutton salmon beetroot potato tropical_fish dried_kelp
 model=sweets_bag
 nbt.display.Name=ipattern:\u041f\u0430\u043a\u0435\u0442 \u043a\u043e\u043d\u0444\u0435\u0442
 # Пакет конфет
