--- a/assets/assets/minecraft/optifine/cit/candy_corn/candy_corn.properties
+++ b/assets/assets/minecraft/optifine/cit/candy_corn/candy_corn.properties
@@ -1,5 +1,5 @@
 type=item
-matchItems=pumpkin_pie cooked_beef rabbit_stew cake cooked_porkchop mushroom_stew beetroot_soup golden_carrot cooked_mutton cooked_chicken cooked_salmon suspicious_stew honey_bottle baked_potato cooked_rabbit cooked_fish bread golden_apple apple chorus_fruit rotten_flesh carrot beef rabbit porkchop sweet_berries melon_slice chicken cod cookie mutton salmon	beetroot potato tropical_fish dried_kelp
+matchItems=pumpkin_pie cooked_beef rabbit_stew cake cooked_porkchop mushroom_stew beetroot_soup golden_carrot cooked_mutton cooked_chicken cooked_salmon suspicious_stew honey_bottle baked_potato cooked_rabbit cooked_cod bread golden_apple apple chorus_fruit rotten_flesh carrot beef rabbit porkchop sweet_berries melon_slice chicken cod cookie mutton salmon beetroot potato tropical_fish dried_kelp
 model=candy_corn
 nbt.display.Name=ipattern:\u0421\u043b\u0430\u0434\u043a\u0430\u044f \u043a\u0443\u043a\u0443\u0440\u0443\u0437\u0430
 # Сладкая кукуруза
