--- a/assets/assets/minecraft/optifine/cit/christmas_lollipop/christmas_lollipop.properties
+++ b/assets/assets/minecraft/optifine/cit/christmas_lollipop/christmas_lollipop.properties
@@ -1,4 +1,4 @@
 type=item
-matchItems=pumpkin_pie cooked_beef rabbit_stew cake cooked_porkchop mushroom_stew beetroot_soup golden_carrot cooked_mutton cooked_chicken cooked_salmon suspicious_stew honey_bottle baked_potato cooked_rabbit cooked_fish bread golden_apple apple chorus_fruit rotten_flesh carrot beef rabbit porkchop sweet_berries melon_slice chicken cod cookie mutton salmon	beetroot potato tropical_fish dried_kelp
+matchItems=pumpkin_pie cooked_beef rabbit_stew cake cooked_porkchop mushroom_stew beetroot_soup golden_carrot cooked_mutton cooked_chicken cooked_salmon suspicious_stew honey_bottle baked_potato cooked_rabbit cooked_cod bread golden_apple apple chorus_fruit rotten_flesh carrot beef rabbit porkchop sweet_berries melon_slice chicken cod cookie mutton salmon beetroot potato tropical_fish dried_kelp
 model=christmas_lollipop
 nbt.display.Name=ipattern:\u0440\u043E\u0436\u0434\u0435\u0441\u0442\u0432\u0435\u043D\u0441\u043A\u0430\u044F \u0442\u0440\u043E\u0441\u0442\u044C
