Испрвление: Одежда санты

--- a/assets/assets/minecraft/optifine/cit/santa_armor/icon/santa_boots.properties
+++ b/assets/assets/minecraft/optifine/cit/santa_armor/icon/santa_boots.properties
@@ -1,4 +1,4 @@
-type=icon
+type=item
 matchItems=chainmail_boots golden_boots iron_boots diamond_boots netherite_boots leather_boots
 
 texture.chainmail_layer_1=boots
