--- a/assets/assets/minecraft/optifine/cit/santa_armor/icon/santa_chestplate.properties
+++ b/assets/assets/minecraft/optifine/cit/santa_armor/icon/santa_chestplate.properties
@@ -1,4 +1,4 @@
-type=icon
+type=item
 matchItems=chainmail_chestplate golden_chestplate iron_chestplate diamond_chestplate netherite_chestplate leather_chestplate
 
 texture.chainmail_layer_1=chestplate
