--- a/assets/assets/minecraft/optifine/cit/santa_armor/icon/santa_helmet.properties
+++ b/assets/assets/minecraft/optifine/cit/santa_armor/icon/santa_helmet.properties
@@ -1,4 +1,4 @@
-type=icon
+type=item
 matchItems=chainmail_helmet golden_helmet iron_helmet diamond_helmet netherite_helmet leather_helmet
 
 texture.chainmail_layer_1=helmet
