--- a/assets/assets/minecraft/optifine/cit/santa_armor/icon/santa_leggings.properties
+++ b/assets/assets/minecraft/optifine/cit/santa_armor/icon/santa_leggings.properties
@@ -1,4 +1,4 @@
-type=icon
+type=item
 matchItems=chainmail_leggings golden_leggings iron_leggings diamond_leggings netherite_leggings leather_leggings
 
 texture.chainmail_layer_2=leggings
