--- a/assets/assets/minecraft/optifine/cit/holliday_pack/gift/black.properties
+++ b/assets/assets/minecraft/optifine/cit/holliday_pack/gift/black.properties
@@ -1,4 +1,4 @@
 type=item
 matchItems=black_shulker_box
 model=black
-nbt.display.Name=ipattern:\u041F\u043E\u0434\u0430\u0440\u043E\u043A
+nbt.display.Name=ipattern:\u0427\u0451\u0440\u043D\u044B\u0439 \u043F\u043E\u0434\u0430\u0440\u043E\u043A
