--- a/assets/assets/minecraft/optifine/cit/holliday_pack/gift/blue.properties
+++ b/assets/assets/minecraft/optifine/cit/holliday_pack/gift/blue.properties
@@ -1,4 +1,4 @@
 type=item
 matchItems=blue_shulker_box
 model=blue
-nbt.display.Name=ipattern:\u041F\u043E\u0434\u0430\u0440\u043E\u043A
+nbt.display.Name=ipattern:\u0413\u043E\u043B\u0443\u0431\u043E\u0439 \u043F\u043E\u0434\u0430\u0440\u043E\u043A
