--- a/assets/assets/minecraft/optifine/cit/holliday_pack/gift/brown.properties
+++ b/assets/assets/minecraft/optifine/cit/holliday_pack/gift/brown.properties
@@ -1,4 +1,4 @@
 type=item
 matchItems=brown_shulker_box
 model=brown
-nbt.display.Name=ipattern:\u041F\u043E\u0434\u0430\u0440\u043E\u043A
+nbt.display.Name=ipattern:\u041A\u043E\u0440\u0438\u0447\u043D\u0435\u0432\u044B\u0439 \u043F\u043E\u0434\u0430\u0440\u043E\u043A
