--- a/assets/assets/minecraft/optifine/cit/holliday_pack/gift/gray.properties
+++ b/assets/assets/minecraft/optifine/cit/holliday_pack/gift/gray.properties
@@ -1,4 +1,4 @@
 type=item
 matchItems=gray_shulker_box
 model=gray
-nbt.display.Name=ipattern:\u041F\u043E\u0434\u0430\u0440\u043E\u043A
+nbt.display.Name=ipattern:\u0421\u0435\u0440\u044B\u0439 \u043F\u043E\u0434\u0430\u0440\u043E\u043A
