--- a/assets/assets/minecraft/optifine/cit/holliday_pack/gift/green.properties
+++ b/assets/assets/minecraft/optifine/cit/holliday_pack/gift/green.properties
@@ -1,4 +1,4 @@
 type=item
 matchItems=green_shulker_box
 model=green
-nbt.display.Name=ipattern:\u041F\u043E\u0434\u0430\u0440\u043E\u043A
+nbt.display.Name=ipattern:\u0417\u0435\u043B\u0435\u043D\u044B\u0439 \u043F\u043E\u0434\u0430\u0440\u043E\u043A
