--- a/assets/assets/minecraft/optifine/cit/holliday_pack/gift/lime.properties
+++ b/assets/assets/minecraft/optifine/cit/holliday_pack/gift/lime.properties
@@ -1,4 +1,4 @@
 type=item
 matchItems=lime_shulker_box
 model=lime
-nbt.display.Name=ipattern:\u041F\u043E\u0434\u0430\u0440\u043E\u043A
+nbt.display.Name=ipattern:\u041B\u0430\u0439\u043C\u043E\u0432\u044B\u0439 \u043F\u043E\u0434\u0430\u0440\u043E\u043A
