--- a/assets/assets/minecraft/optifine/cit/holliday_pack/gift/magenta.properties
+++ b/assets/assets/minecraft/optifine/cit/holliday_pack/gift/magenta.properties
@@ -1,4 +1,4 @@
 type=item
 matchItems=magenta_shulker_box
 model=magenta
-nbt.display.Name=ipattern:\u041F\u043E\u0434\u0430\u0440\u043E\u043A
+nbt.display.Name=ipattern:\u0424\u0438\u043E\u043B\u0435\u0442\u043E\u0432\u044B\u0439 \u043F\u043E\u0434\u0430\u0440\u043E\u043A
