--- a/assets/assets/minecraft/optifine/cit/holliday_pack/gift/orange.properties
+++ b/assets/assets/minecraft/optifine/cit/holliday_pack/gift/orange.properties
@@ -1,4 +1,4 @@
 type=item
 matchItems=orange_shulker_box
 model=orange
-nbt.display.Name=ipattern:\u041F\u043E\u0434\u0430\u0440\u043E\u043A
+nbt.display.Name=ipattern:\u041E\u0440\u0430\u043D\u0436\u0435\u0432\u044B\u0439 \u043F\u043E\u0434\u0430\u0440\u043E\u043A
