--- a/assets/assets/minecraft/optifine/cit/holliday_pack/gift/pink.properties
+++ b/assets/assets/minecraft/optifine/cit/holliday_pack/gift/pink.properties
@@ -1,4 +1,4 @@
 type=item
 matchItems=pink_shulker_box
 model=pink
-nbt.display.Name=ipattern:\u041F\u043E\u0434\u0430\u0440\u043E\u043A
+nbt.display.Name=ipattern:\u0420\u043E\u0437\u043E\u0432\u044B\u0439 \u043F\u043E\u0434\u0430\u0440\u043E\u043A
