--- a/assets/assets/minecraft/optifine/cit/holliday_pack/gift/purple.properties
+++ b/assets/assets/minecraft/optifine/cit/holliday_pack/gift/purple.properties
@@ -1,4 +1,4 @@
 type=item
 matchItems=purple_shulker_box
 model=purple
-nbt.display.Name=ipattern:\u041F\u043E\u0434\u0430\u0440\u043E\u043A
+nbt.display.Name=ipattern:\u041F\u0443\u0440\u043F\u0443\u0440\u043D\u044B\u0439 \u043F\u043E\u0434\u0430\u0440\u043E\u043A
