--- a/assets/assets/minecraft/optifine/cit/holliday_pack/gift/red.properties
+++ b/assets/assets/minecraft/optifine/cit/holliday_pack/gift/red.properties
@@ -1,4 +1,4 @@
 type=item
 matchItems=red_shulker_box
 model=red
-nbt.display.Name=ipattern:\u041F\u043E\u0434\u0430\u0440\u043E\u043A
+nbt.display.Name=ipattern:\u041A\u0440\u0430\u0441\u043D\u044B\u0439 \u043F\u043E\u0434\u0430\u0440\u043E\u043A
