--- a/assets/assets/minecraft/optifine/cit/holliday_pack/gift/yellow.properties
+++ b/assets/assets/minecraft/optifine/cit/holliday_pack/gift/yellow.properties
@@ -1,4 +1,4 @@
 type=item
 matchItems=yellow_shulker_box
 model=yellow
-nbt.display.Name=ipattern:\u041F\u043E\u0434\u0430\u0440\u043E\u043A
+nbt.display.Name=ipattern:\u0416\u0451\u043B\u0442\u044B\u0439 \u043F\u043E\u0434\u0430\u0440\u043E\u043A
