--- a/assets/assets/minecraft/optifine/cit/gold_wrist_watch/gold_wrist_watch.properties
+++ b/assets/assets/minecraft/optifine/cit/gold_wrist_watch/gold_wrist_watch.properties
@@ -1,5 +1,5 @@
-type=item
+﻿type=item
 matchItems=carved_pumpkin
 model=gold_wrist_watch
-nbt.display.Name=ipattern:\u0437\u043E\u043B\u043E\u0442\u044B\u0435 \u043D\u0430\u0440\u0443\u0447\u043D\u044B\u0435 \u0447\u0430\u0441\u044B
-#Золотые наручные часы
+nbt.display.Name=ipattern:\u0417\u043E\u043B\u043E\u0442\u044B\u0435 \u0447\u0451\u0440\u043D\u044B\u0435 \u0447\u0430\u0441\u044B
+#Золотые чёрные часы
