--- a/assets/assets/minecraft/optifine/cit/docs/visa_atomsk.properties
+++ b/assets/assets/minecraft/optifine/cit/docs/visa_atomsk.properties
@@ -1,5 +1,5 @@
 type=item
 matchItems=paper
 model=visa_atomsk
-nbt.display.Name=ipattern:\u0432\u0438\u0437\u0430 \u0410\u0442\u043E\u043C\u0441\u043A\u0430
+nbt.display.Name=ipattern:*\u0410\u0442\u043E\u043C\u0441\u043A\u0430
 #виза Атомска
