--- a/assets/assets/minecraft/optifine/cit/bavarian_caviar/bavarian_caviar.properties
+++ b/assets/assets/minecraft/optifine/cit/bavarian_caviar/bavarian_caviar.properties
@@ -1,5 +1,5 @@
 type=item
-matchItems=pufferfish
+matchItems=potion
 model=bavarian_caviar
-nbt.display.Name=ipattern:\u0411\u0430\u0432\u0430\u0440\u0441\u043a\u0430\u044f \u0438\u043a\u0440\u0430
+nbt.CustomModelData=128
 #Баварская икра
