--- a/assets/assets/minecraft/optifine/cit/jacket_smi/icon/jacket_smi_i.properties
+++ b/assets/assets/minecraft/optifine/cit/jacket_smi/icon/jacket_smi_i.properties
@@ -1,4 +1,4 @@
 type=item
 matchItems=leather_chestplate
-texture=jacket_smi_i
-nbt.display.Name=ipattern:\u0416\u0438\u043b\u0435\u0442 \u0421\u041c\u0418 1
+texture.leather_layer_1=jacket_smi_i
+nbt.CustomModelData=526
