--- a/assets/assets/minecraft/optifine/cit/jacket_smi/jacket_smi_1.properties
+++ b/assets/assets/minecraft/optifine/cit/jacket_smi/jacket_smi_1.properties
@@ -1,4 +1,4 @@
-type=item
+type=armor
 matchItems=leather_chestplate
-texture.leather_layer_1=jacket_smi_i1
+texture=jacket_smi_1
 nbt.CustomModelData=527
