--- a/assets/assets/minecraft/optifine/cit/pills/pills.properties
+++ b/assets/assets/minecraft/optifine/cit/pills/pills.properties
@@ -1,4 +1,5 @@
 type=item
-matchItems=potion honey_bottle
+matchItems=golden_apple
 model=pills
-nbt.display.Name=ipattern:\u0422\u0430\u0431\u043b\u0435\u0442\u043a\u0438
+nbt.CustomModelData=1
+#Таблетки
