--- a/assets/assets/minecraft/optifine/cit/first_aid_kit/first_aid_kit.properties
+++ b/assets/assets/minecraft/optifine/cit/first_aid_kit/first_aid_kit.properties
@@ -1,5 +1,5 @@
 type=item
-matchItems=carved_pumpkin jack_o_lantern
+matchItems=golden_apple
 model=first_aid_kit
-nbt.display.Name=ipattern:\u0410\u043f\u0442\u0435\u0447\u043a\u0430
+nbt.CustomModelData=2
 #Аптечка
