--- a/assets/assets/minecraft/optifine/cit/katana/dark_katana.properties
+++ b/assets/assets/minecraft/optifine/cit/katana/dark_katana.properties
@@ -1,4 +1,4 @@
 type=item
 matchItems=wooden_sword diamond_sword golden_sword iron_sword stone_sword netherite_sword
-model=katana_tnt
+model=dark_katana
 nbt.display.Name=ipattern:\u0422\u0451\u043c\u043d\u0430\u044f \u043a\u0430\u0442\u0430\u043d\u0430
