--- a/assets/assets/minecraft/optifine/cit/trost/trost.properties
+++ b/assets/assets/minecraft/optifine/cit/trost/trost.properties
@@ -1,5 +1,5 @@
-type=item
+﻿type=item
 matchItems=wooden_sword diamond_sword golden_sword iron_sword stone_sword netherite_sword
 model=arm
-nbt.display.Name=ipattern:\u0422\u0435\u0445\u043d\u043e \u0440\u0443\u043a\u0430
-#Техно рука
+nbt.display.Name=ipattern:\u0422\u0440\u043E\u0441\u0442\u044C
+#Трость
