--- a/assets/assets/minecraft/optifine/cit/SLidentity_card/SLidentity_card.properties
+++ b/assets/assets/minecraft/optifine/cit/SLidentity_card/SLidentity_card.properties
@@ -1,5 +1,5 @@
 ﻿type=item
 matchItems=written_book writable_book
 model=slidentity_card
-nbt.display.Name=ipattern:*\u0423\u0434\u043E\u0441\u0442\u043E\u0432\u0435\u0440\u0435\u043D\u0438\u0435 \u043F\u043E\u043B\u0438\u0446\u0438\u0438*
+nbt.title=ipattern:*\u0423\u0434\u043E\u0441\u0442\u043E\u0432\u0435\u0440\u0435\u043D\u0438\u0435 \u043F\u043E\u043B\u0438\u0446\u0438\u0438*
 #Удостоверение полиции
